0.144.50
    Update biz.aQute.bndlib from 5.2.0 to 5.3.0
    Update manifold from 2020.1.45 to 2021.1.11

0.144.49
    Update byte-buddy from 1.10.19 to 1.10.21
    Update HikariCP from 4.0.1 to 4.0.2
    Update jersey from 2.32 to 2.33
    Update junit from 4.13.1 to 4.13.2
    Update killbill-commons from 0.24.11 to 0.24.13
    Update netty from 4.1.58.Final to 4.1.59.Final
    Update postgresql from 42.2.18 to 42.2.19

0.144.48
    Update killbill-client from 1.2.1 to 1.2.2

0.144.47
    Update killbill-platform from 0.40.5 to 0.40.6

0.144.46
    Update killbill-base-plugin from 4.2.10 to 4.2.11

0.144.45
    Update killbill-commons from 0.24.11 to 0.24.12

0.144.44
    Update checker-qual from 3.9.1 to 3.10.0
    Update HikariCP from 4.0.0 to 4.0.1
    Update janino from 3.1.2 to 3.1.3
    Update jersey from 1.19.4 to 2.32
    Update joda-time from 2.10.9 to 2.10.10
    Update jooq from 3.14.4 to 3.14.7
    Update kotlin-stdlib-common from 1.4.21 to 1.4.30
    Update mariadb-java-client from 2.7.1 to 2.7.2
    Update redisson from 3.14.1 to 3.15.0
    Update snappy-java from 1.1.8.2 to 1.1.8.4
    Update spotbugs-annotations from 4.2.0 to 4.2.1

0.144.43
    Update assertj-core from 3.18.1 to 3.19.0
    Update checker-qual from 3.8.0 to 3.9.1
    Update HikariCP from 3.4.5 to 4.0.0
    Update jetty from 9.4.35.v20201120 to 9.4.36.v20210114
    Update mockito-core from 3.6.28 to 3.7.7
    Update mysql-connector-java from 8.0.22 to 8.0.23
    Update sortpom-maven-plugin from 2.12.0 to 2.13.1

0.144.42
    Update killbill-base-plugin from 4.2.9 to 4.2.10

0.144.41
    Update killbill-platform from 0.40.4 to 0.40.5

0.144.40
    Update killbill-commons from 0.24.9 to 0.24.11
    Update netty from 4.1.56.Final to 4.1.58.Final

0.144.39
    No functional change

0.144.38
    Update assertj-core from 3.18.0 to 3.18.1
    Update byte-buddy from 1.10.18 to 1.10.19
    Update checker-qual from 3.7.0 to 3.8.0
    Update compress-lzf from 1.0.4 to 1.1