@@ -1,5 +1,6 @@
 0.144.50
     Update biz.aQute.bndlib from 5.2.0 to 5.3.0
+    Update killbill-commons from 0.24.13 to 0.24.14
     Update manifold from 2020.1.45 to 2021.1.11
 
 0.144.49
